MDEV-6003: EITS: ref access, keypart2=const vs keypart2=expr - inconsistent filtered% value - Fix table_cond_selectivity() to work correctly for ref access   and "keypart2=const" case.